# upowertray

./: .SRCINFO  .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  PKGBUILD  README.md  upowertray.desktop
.github/workflows/: ci.yml  publish-aur.yml  publish-ppa.yml  release.yml
debian/: changelog  control  copyright  files
docs/: HIBERNATE.adoc  INSTALLATION.adoc  PACKAGE.adoc  SOLUTION_ARCHITECTURE.adoc  TROUBLESHOOTING.adoc
src/: batteryicon.cpp  batteryicon.h  batterytray.cpp  batterytray.h  main.cpp  settingsdialog.cpp  settingsdialog.h  upowerhelper.cpp  upowerhelper.h
tests/: test_batteryicon.cpp  test_upowerhelper.cpp
translations/: upowertray_en.ts  upowertray_es.ts
